<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include layout="@layout/layout_toolbar"
                 android:elevation="4dp"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/colorAccent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:elevation="4dp">

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/activity_horizontal_margin"
                            android:paddingEnd="@dimen/activity_horizontal_margin"
                            android:textColorHint="@color/white"
                            android:theme="@style/White"
                            android:layout_marginTop="10dp">

                        <EditText
                                android:id="@+id/title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_title"
                                android:maxLines="2"
                                android:theme="@style/WhiteEditText"
                                android:textColor="@color/white"
                                android:textStyle="bold"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="10dp">

                    <EditText
                            android:id="@+id/note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_note"
                            android:maxLines="2"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/add_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_location"
                        android:theme="@style/BorderlessButton"
                        android:clickable="true"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"/>

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <android.support.design.widget.FloatingActionButton
                            android:id="@+id/add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:layout_margin="16dp"
                            android:src="@drawable/camera"/>

                    <ImageView
                            android:id="@+id/image"
                            android:scaleType="centerCrop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxHeight="364dp"
                            android:adjustViewBounds="true"
                            tools:ignore="ContentDescription"/>

                </FrameLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/save"
            android:clickable="true"
            app:layout_anchor="@id/root"
            app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>