...
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_frame"
                    android:background="@color/colorAccent"
                    android:elevation="2dp">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
